# SPACEGASSautomation

./: .gitignore  README.md  justfile  pyproject.toml
background/: Deck Long SLS2000-2999.TXT  Deck Trans SLS2000-2999.TXT
src/: MASTER.xlsx  RC Beam Design to AS3600 - 2018.xlsm  concrete_capacity.py  script.py  sg_results.py
tests/: conftest.py  test_concrete_capacity.py  test_sg_results.py
tests/fixtures/: example2_sg_output.txt  example_sg_output.txt  minimal_sg_output.txt
