[project]
name = "spacegassautomation"
version = "0.1.0"
description = "Help run and analyse spacegass structural analyses"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "xlwings>=0.33.19",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
]
